--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-numpy>=1.26.0
-scipy>=1.11.0
-ezdxf>=1.1.0
+numpy==1.21.0
+scipy==1.7.3
+ezdxf==1.0.0
 h5py>=3.10.0
-Flask>=3.0.0
-plotly>=5.18.0
+Flask==2.0.1
+Werkzeug==2.0.3
+plotly==5.17.0
 matplotlib>=3.8.0
 SQLAlchemy>=2.0.0
